client/src/styles.css
/* You can add global styles to this file, and also import other style files */
@font-face {
    font-family: 'Montserrat';
    src: url('./assets/fonts/Montserrat/Montserrat-Regular.ttf');
}

* {
    margin: 0;
    padding: 0;
    font: 14px  'Montserrat',san-serif;
}

